# curver-backend

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
src/: client.rs  config.rs  constants.rs  curver_error.rs  curver_ws_actor.rs  debug_ui.rs  game.rs  handler.rs  lib.rs  main.rs  message.rs  point.rs  room.rs  server.rs
src/game/: mod.rs  path.rs  player.rs
